# ELT

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
migrate/: __main__.py  postgres_saver.py  schemes.py  sqlite_loader.py
movies_admin/: Dockerfile  requirements.txt
movies_admin/api/v1/: urls.py  views.py
movies_admin/config/: settings.py  urls.py
movies_admin/movies/: admin.py  signals.py
movies_admin/movies/migrations/: 0001_initial.py
nginx/conf.d/: site.conf
postgres_to_es/: Dockerfile  Makefile  config.py  extractor.py  loader.py  models.py  requirements.txt  state.py  tasks.py  transform.py  utils.py
schema_design/: 001_init_db.sql  db_schema.sql
sqlite_to_postgres/: load_data.py  sqlite_loader.py
