[tool.poetry]
name = "ETL"
version = "0.1.0"
description = ""
authors = ["Vasilii Safronov <vasi1988@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.9"
Django = "^3.2.9"
django-debug-toolbar = "^3.2.2"
django-extensions = "^3.1.5"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
